adicionado classe sfradialGauge - ajustes corrindo erro flutter v 3.10.1

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  syncfusion_flutter_gauges: ^21.2.8
+  syncfusion_flutter_gauges: 21.2.8
   currency_text_input_formatter: ^2.1.10
 
   # The following adds the Cupertino Icons font to your application.
